# FH_control

./: CMakeLists.txt  Control.cpp  Control.h  FH_Motor.tar.gz2  MiniPID.cpp  MiniPID.h  README.md  RS232.cpp  main.cpp
func_test/: CMakeLists.txt  MiniPID.cpp  MiniPID.h  main.cpp
github_serial/: CMakeLists.txt  MiniPID.cpp  MiniPID.h  README.MD  RS232.cpp  RS232.h  main.cpp
github_version/FH_Motor/: CMakeLists.txt  README.MD
github_version/FH_Motor/include/: Control.h  MiniPID.h  RS232.h
github_version/FH_Motor/src/: Control.cpp  RS232.cpp
